finished by modifications

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
         &copy; Copyright <strong>Studio Götarp</strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://webbalma.com/">webbalma</a>
+        Designed by <a href="https://blibb.net/">Me</a>
       </div>
     </div>
   </footer><!-- #footer -->
